# synauth

./: README.md  pyproject.toml
examples/: agent_example.py  crewai_tool.py  langchain_tool.py  quickstart_totp.py
src/synauth/: __init__.py  client.py  pay.py
