[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synauth"
version = "0.1.2"
description = "SynAuth SDK — Biometric approval for AI agent actions via Face ID"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SynAuth", email = "hello@synauth.dev" },
]
keywords = ["agent", "auth", "biometric", "face-id", "ai-agent", "authorization", "synauth", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://synauth.dev"
Documentation = "https://synauth.dev"
Repository = "https://github.com/dennischoubot-glitch/synauth"

[tool.hatch.build.targets.wheel]
packages = ["src/synauth"]
